--- a/app/src/main/res/layout/tech_card.xml
+++ b/app/src/main/res/layout/tech_card.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/item"
         android:layout_width="235dp"
         android:layout_height="203dp"
         android:layout_margin="7dp"
@@ -31,7 +32,7 @@
                 app:srcCompat="@drawable/baseline_laptop_24" />
 
             <TextView
-                android:id="@+id/stockid"
+                android:id="@+id/sid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Stock #12" />
