--- a/app/src/main/res/layout/tech_card.xml
+++ b/app/src/main/res/layout/tech_card.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,13 +8,13 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/item"
         android:layout_width="235dp"
-        android:layout_height="203dp"
-        android:layout_margin="7dp"
-        app:cardBackgroundColor="@color/white"
+        android:layout_height="wrap_content"
+        android:layout_margin="0dp"
+        app:cardBackgroundColor="#94E3DB"
         app:cardCornerRadius="10dp"
         app:cardElevation="8dp"
-        app:cardPreventCornerOverlap="true"
         app:cardUseCompatPadding="true"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical"
-            android:paddingHorizontal="20dp">
+            >
 
             <ImageView
                 android:id="@+id/icon"
@@ -54,8 +54,7 @@
                 android:textColor="#FF0000"
                 android:textSize="20sp"
                 android:textStyle="bold" />
-
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
+
