--- a/app/src/main/res/layout/tech_card.xml
+++ b/app/src/main/res/layout/tech_card.xml
@@ -3,26 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:layout_marginBottom="20dp"
+    >
 
     <androidx.cardview.widget.CardView
         android:id="@+id/item"
         android:layout_width="235dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="0dp"
-        app:cardBackgroundColor="#94E3DB"
+        android:layout_height="222dp"
+        app:cardBackgroundColor="@color/base"
         app:cardCornerRadius="10dp"
         app:cardElevation="8dp"
         app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+
+
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="204dp"
             android:gravity="center"
             android:orientation="vertical"
+
+
             >
 
             <ImageView
@@ -35,7 +42,9 @@
                 android:id="@+id/sid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Stock #12" />
+                android:text="Stock #12"
+                android:fontFamily="@font/playfair"
+                />
 
             <TextView
                 android:id="@+id/name"
@@ -44,7 +53,9 @@
                 android:text="Name of laptop"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+
+                />
 
             <TextView
                 android:id="@+id/status"
@@ -53,8 +64,11 @@
                 android:text="Sold"
                 android:textColor="#FF0000"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:fontFamily="@font/playfair"
+                />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
 </LinearLayout>
+
 
