--- a/app/src/main/res/layout/activity_add_edit_tech.xml
+++ b/app/src/main/res/layout/activity_add_edit_tech.xml
@@ -6,12 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddEditTechActivity"
-    android:background="#B3E5FC">
+    android:background="@color/base">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/insert_details"
-        android:textColor="#ED0000"
+        android:textColor="@color/header"
+        android:textStyle="bold"
         android:textSize="35sp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,6 +56,7 @@
             />
 
         <RadioGroup
+            android:id="@+id/radiogroup"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
