--- a/app/src/main/res/layout/activity_tech_details.xml
+++ b/app/src/main/res/layout/activity_tech_details.xml
@@ -9,6 +9,7 @@
     android:background="@color/base"
     >
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -101,5 +102,15 @@
             android:textStyle="bold"
             android:fontFamily="@font/playfair"
             />
+        <Button
+            android:id="@+id/buy"
+            android:layout_width="90dp"
+            android:layout_height="50dp"
+            android:text="BUY NOW"
+            android:layout_marginHorizontal="34dp"
+            android:layout_marginBottom="52dp"
+            android:layout_gravity="center"
+            />
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
